# folder-synchronizer

./: .coverage  .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  installation.md  usage.md
src/core/: cli.py  logger.py  synchronizer.py  utils.py
src/folder_synchronizer_server/: log_config.py  main.py
src/folder_synchronizer_simple/: main.py
tests/: test_cli.py  test_folder_synchronizer_simple.py  test_logger.py
