[tool.poetry]
name = "folder-synchronizer"
version = "0.1.0"
description = "folder synchronizer for source and replicas"
authors = ["Prosper Ablordeppey <30740369+prablordeppey@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "folder_synchronizer_simple", from = "src" },
    { include = "folder_synchronizer_server", from = "src" }
]

# Base dependencies
[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"

# Development dependencies
[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"
mypy = "^1.11.1"
ruff = "^0.5.6"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocs-include-markdown-plugin = "^6.2.1"
parameterized = "^0.9.0"

# Deps for individual packages
[tool.poetry.extras]
simple = []
server = ["fastapi", "uvicorn"]

# Static checks and linting
[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "C", "N", "Q"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# Create the virtual environment and install Poetry
setup_venv.shell = """
    python -m venv .venv && \
    .venv/Scripts/activate && \
    pip install --upgrade pip && \
    pip install poetry && \
    poetry install && \
    deactivate
"""

# Install dependencies for the simple case (excluding server dependencies)
install_simple.shell = """
    .venv/Scripts/activate && \
    poetry install --extras simple && \
    deactivate
"""

# Install dependencies for the server case (including server dependencies)
install_server.shell = """
    .venv/Scripts/activate && \
    poetry install --extras server && \
    deactivate
"""

# Remove all poetry created venvs
clean.shell = """
    rm -rf .venv && \
    poetry cache clear --all pypi
"""
check = "poetry run mypy src && poetry run ruff check src --fix"
# sync_simple = "poetry run python -m folder_synchronizer_simple.main C:/Users/iCETEE/Desktop/Projects/veeam/folder-synchronizer/src/core/data/source C:/Users/iCETEE/Desktop/Projects/veeam/folder-synchronizer/src/core/data/replica 60 C:/Users/iCETEE/Desktop/Projects/veeam/folder-synchronizer/src/core/data/logfile.log"
sync_simple = "poetry run python -m folder_synchronizer_simple.main C:/Users/iCETEE/Desktop/Projects/veeam/folder-synchronizer/data/source"
sync_server = "poetry run python -m folder_synchronizer.main /path/to/source /path/to/replica 60 /path/to/logfile.log"
docs = "poetry run mkdocs build"
serve_docs = "poetry run mkdocs serve"
tests = "pytest --cov=src --cov-report=term-missing tests/"
