[tool.poetry]
name = "folder-synchronizer"
version = "0.1.0"
description = "folder synchronizer for source and replicas"
authors = ["Prosper Ablordeppey <30740369+prablordeppey@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "folder_synchronizer_simple", from = "src" },
    { include = "folder_synchronizer_server", from = "src" }
]

# Base dependencies
[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
fastapi = {version="^0.112.0", optional=true, extras=["server"]}
uvicorn = {version="^0.30.5", optional=true, extras=["server"]}
apscheduler = {version="^3.10.4", optional=true, extras=["server"]}

[tool.poetry.group.dev.dependencies]
# Development dependencies
poethepoet = "^0.27.0"
mypy = "^1.11.1"
ruff = "^0.5.6"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocs-include-markdown-plugin = "^6.2.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
mkdocs-gen-files = "^0.5.0"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}

[tool.poetry.extras]
# Deps for individual packages
simple = []
server = ["fastapi", "uvicorn", "apscheduler"]

[tool.ruff]
# Static checks and linting
line-length = 120
lint.select = ["E", "W", "F", "C", "N", "Q"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# Create the virtual environment and install Poetry
create_venv.shell = """
    python -m venv .venv && \
    .venv/Scripts/activate && \
    pip install --upgrade pip && \
    pip install poetry && \
    deactivate
"""

# Create the virtual environment and install Poetry
install_dev.shell = """
    poetry install && \
    poetry install --only=dev
"""

# Install dependencies for the simple case (excluding server dependencies)
install_simple.shell = """
    poetry install -E simple
"""

# Install dependencies for the server case (including server dependencies)
install_server.shell = """
    poetry install -E server
"""

# Install all dependencies
install_all.shell = """
    .venv/Scripts/activate && \
    poetry run poe install_dev && \
    poetry run poe install_simple && \
    poetry run poe install_server && \
    deactivate
"""

# Remove all poetry created venvs
clean.shell = """
    rm -rf .venv && \
    poetry cache clear --all pypi && \
    rm -rf $POETRY_HOME/cache/virtualenvs/folder-synchronizer*
"""
check = "poetry run mypy src && poetry run ruff check src --fix"
test = "poetry run pytest --cov=src tests"
test_cov = "poetry run pytest --cov=src --cov-report=term-missing tests/"
serve_docs = "poetry run mkdocs serve"
build_docs = "poetry run mkdocs build"
sync_simple = "poetry run python -m folder_synchronizer_simple.main"
sync_server = "poetry run python -m folder_synchronizer_server.main"
